--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,3 @@
-/* To learn more about this file see: https://angular.io/config/tsconfig. */
 {
   "compileOnSave": false,
   "compilerOptions": {
@@ -16,9 +15,9 @@
     "experimentalDecorators": true,
     "moduleResolution": "node",
     "importHelpers": true,
-    "target": "es2022",
+    "target": "es2020",
     "module": "es2020",
-    "lib": ["es2018", "dom"],
+    "lib": ["ES2020", "DOM", "ES2021.Promise"],
     "useDefineForClassFields": false
   },
   "angularCompilerOptions": {
