--- a/angular.json
+++ b/angular.json
@@ -129,7 +129,10 @@
     }
   },
   "cli": {
-    "schematicCollections": ["@ionic/angular-toolkit"]
+    "schematicCollections": [
+      "@ionic/angular-toolkit"
+    ],
+    "analytics": "8f86bbd7-a347-439f-bf40-615cd9f5418b"
   },
   "schematics": {
     "@ionic/angular-toolkit:component": {
